src/objects/sdfs__FormulaShare_Rule__mdt.object
<CustomObject>
    <description>Holds dynamic sharing rules for the org. NOTE rules are now set up through the FormulaShare app, assigned with the &quot;FormulaShare Admin User&quot; permission set. It&apos;s strongly recommended you manage rules this way and not by changing metadata directly, which ensures rules are valid and allows easy monitoring</description>
    <fields>
        <fullName>sdfs__Access_For_Owner_Of_Teams_User_Is_On__c</fullName>
        <label>Access For Owner Of Teams User Is On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Access_For_Team_Comembers__c</fullName>
        <label>Access For Team Comembers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Access_For_Team__c</fullName>
        <label>Access For Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Access_Level__c</fullName>
        <label>Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Varies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Case_Access__c</fullName>
        <label>Case Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Child_Object_Lookup_Field__c</fullName>
        <inlineHelpText>If sharing is based on a child object (or an object related to this child object), indicates the field on the child object which is a lookup to the object to be shared</inlineHelpText>
        <label>Related Object 1 Lookup to Shared Object</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Child_Object_with_Shared_To_Field__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules2</relationshipLabel>
        <relationshipName>FormulaShare_Rules2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Child_Object_Shared_To_Field_Type__c</fullName>
        <inlineHelpText>If sharing is based on the contents of a field in a related object, indicates the type of data in the shared to field (id or name) on the related object controlling this sharing</inlineHelpText>
        <label>Controlling Object Shared To Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Id</fullName>
                    <default>true</default>
                    <label>Id</label>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Child_Object_Shared_To_Field__c</fullName>
        <inlineHelpText>If sharing is based on the contents of a field in an object related directly to the shared object, indicates the field which contains the user, role or group that the shared object should be shared with</inlineHelpText>
        <label>Related Object 1 Shared To Field</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Child_Object_with_Shared_To_Field__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules1</relationshipLabel>
        <relationshipName>FormulaShare_Rules1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Child_Object_with_Shared_To_Field__c</fullName>
        <inlineHelpText>If sharing is based on the contents of a field in a related child object, indicate the child object here</inlineHelpText>
        <label>Related Object 1</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules1</relationshipLabel>
        <relationshipName>FormulaShare_Rules1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Contact_Access__c</fullName>
        <label>Contact Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>ControlledByParent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Metadata_Mapping_Match_Field__c</fullName>
        <label>Metadata Mapping Match Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Metadata_Mapping_Shared_To_Field__c</fullName>
        <label>Metadata Mapping Shared To Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Metadata_Mapping_Type__c</fullName>
        <label>Metadata Mapping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Object_Shared__c</fullName>
        <label>Object Shared</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules</relationshipLabel>
        <relationshipName>FormulaShare_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_10_Lookup_from_RO9__c</fullName>
        <label>Related Object 10 Lookup from RO9</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_9__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules35</relationshipLabel>
        <relationshipName>FormulaShare_Rules35</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_10_Lookup_to_RO9__c</fullName>
        <label>Related Object 10 Lookup to RO9</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_10__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules37</relationshipLabel>
        <relationshipName>FormulaShare_Rules37</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_10_Shared_To_Field__c</fullName>
        <label>Related Object 10 Shared To Field</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_10__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules38</relationshipLabel>
        <relationshipName>FormulaShare_Rules38</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_10__c</fullName>
        <label>Related Object 10</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules34</relationshipLabel>
        <relationshipName>FormulaShare_Rules34</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_1_Lookup_from_Shared_Obj__c</fullName>
        <label>Related Object 1 Lookup from Shared Obj</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Object_Shared__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules3</relationshipLabel>
        <relationshipName>FormulaShare_Rules3</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_2_Lookup_from_RO1__c</fullName>
        <label>Related Object 2 Lookup from RO1</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Child_Object_with_Shared_To_Field__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules4</relationshipLabel>
        <relationshipName>FormulaShare_Rules4</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_2_Lookup_to_RO1__c</fullName>
        <label>Related Object 2 Lookup to RO1</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_2__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules5</relationshipLabel>
        <relationshipName>FormulaShare_Rules5</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_2_Shared_To_Field__c</fullName>
        <label>Related Object 2 Shared To Field</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_2__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules8</relationshipLabel>
        <relationshipName>FormulaShare_Rules8</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_2__c</fullName>
        <label>Related Object 2</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules2</relationshipLabel>
        <relationshipName>FormulaShare_Rules2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_3_Lookup_from_RO2__c</fullName>
        <label>Related Object 3 Lookup from RO2</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_2__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules6</relationshipLabel>
        <relationshipName>FormulaShare_Rules6</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_3_Lookup_to_RO2__c</fullName>
        <label>Related Object 3 Lookup to RO2</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_3__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules7</relationshipLabel>
        <relationshipName>FormulaShare_Rules7</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_3_Shared_To_Field__c</fullName>
        <label>Related Object 3 Shared To Field</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Related_Object_3__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules9</relationshipLabel>
        <relationshipName>FormulaShare_Rules9</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Object_3__c</fullName>
        <label>Related Object 3</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules3</relationshipLabel>
        <relationshipName>FormulaShare_Rules3</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Share_With__c</fullName>
        <label>Share With</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Users</fullName>
                    <default>true</default>
                    <label>Users</label>
                </value>
                <value>
                    <fullName>Roles</fullName>
                </value>
                <value>
                    <fullName>Roles and Internal Subordinates</fullName>
                </value>
                <value>
                    <fullName>Roles, Internal and Portal Subordinates</fullName>
                </value>
                <value>
                    <fullName>Public Groups</fullName>
                </value>
                <value>
                    <fullName>Managers of Users</fullName>
                </value>
                <value>
                    <fullName>Users and Manager Subordinates</fullName>
                </value>
                <value>
                    <fullName>Default Account Teams of Users</fullName>
                </value>
                <value>
                    <fullName>Default Opportunity Teams of Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Shared_To_Field_Type__c</fullName>
        <inlineHelpText>&quot;Shared To Field&quot; can contain either the 15 or 18 digit record id of the user, group or role to find the right users (select &quot;Id&quot; if so), or can contain the relevant Role Name or Group Name (select &quot;Name&quot; if this is the case)</inlineHelpText>
        <label>Shared To Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Id</fullName>
                    <default>true</default>
                    <label>Id</label>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Shared_To__c</fullName>
        <inlineHelpText>The field on the shared object which contains the name or id of the entity this rule should share to</inlineHelpText>
        <label>Shared To Field</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Rule__mdt.sdfs__Object_Shared__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Rules</relationshipLabel>
        <relationshipName>FormulaShare_Rules</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Sharing_Reason__c</fullName>
        <description>Sharing reason associated with this rule (for custom objects only). The Apex Sharing Reason set here must exist on the shared object, and all records shared through this rule will be shared with this reason</description>
        <label>Sharing Reason</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FormulaShare Rule</label>
    <listViews>
        <fullName>sdfs__All_Rules</fullName>
        <columns>MasterLabel</columns>
        <columns>sdfs__Object_Shared__c</columns>
        <columns>sdfs__Share_With__c</columns>
        <columns>sdfs__Shared_To__c</columns>
        <columns>sdfs__Sharing_Reason__c</columns>
        <columns>sdfs__Access_Level__c</columns>
        <columns>sdfs__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
    </listViews>
    <pluralLabel>FormulaShare Rules</pluralLabel>
    <validationRules>
        <fullName>sdfs__Account_related_object_access_case</fullName>
        <active>true</active>
        <errorConditionFormula>sdfs__Object_Shared__r.DeveloperName = &apos;Account&apos; &amp;&amp; ISBLANK(TEXT(sdfs__Case_Access__c))</errorConditionFormula>
        <errorDisplayField>sdfs__Case_Access__c</errorDisplayField>
        <errorMessage>Case Access must be set for account sharing. Select a level of sharing which is the same or more permissive than the org-wide default for cases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sdfs__Account_related_object_access_contact</fullName>
        <active>true</active>
        <errorConditionFormula>sdfs__Object_Shared__r.DeveloperName = &apos;Account&apos; &amp;&amp; ISBLANK(TEXT(sdfs__Contact_Access__c))</errorConditionFormula>
        <errorDisplayField>sdfs__Contact_Access__c</errorDisplayField>
        <errorMessage>Contact Access must be set for account sharing. If organisation-wide default sharing for Contact is &quot;Controlled by Parent&quot; select this as the option, otherwise select a level of sharing which is the same or more permissive than the org-wide default</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sdfs__Account_related_object_access_opps</fullName>
        <active>true</active>
        <errorConditionFormula>sdfs__Object_Shared__r.DeveloperName = &apos;Account&apos; &amp;&amp; ISBLANK(TEXT(sdfs__Opportunity_Access__c))</errorConditionFormula>
        <errorDisplayField>sdfs__Opportunity_Access__c</errorDisplayField>
        <errorMessage>Opportunity Access must be set for account sharing. Select a level of sharing which is the same or more permissive than the org-wide default for opportunities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sdfs__Sharing_reason_must_end_underscores_c</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK( sdfs__Sharing_Reason__c ) &amp;&amp;  RIGHT( sdfs__Sharing_Reason__c , 3) != &apos;__c&apos;</errorConditionFormula>
        <errorDisplayField>sdfs__Sharing_Reason__c</errorDisplayField>
        <errorMessage>Sharing reasons must be appended with &quot;__c&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sdfs__Users_must_be_shared_to_by_Id_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(sdfs__Shared_To_Field_Type__c,&apos;Name&apos;) &amp;&amp;  ISPICKVAL(sdfs__Share_With__c,&apos;Users&apos;)</errorConditionFormula>
        <errorDisplayField>sdfs__Shared_To_Field_Type__c</errorDisplayField>
        <errorMessage>Rules sharing to users must be based on a field returning the user Id (either a lookup or formula field)</errorMessage>
    </validationRules>
</CustomObject>